# rules_ll

./: .bazelrc  .gitignore  .golangci.yml  .markdownlint.json  .pre-commit-config.yaml  .pymarkdown.json  .vale.ini  404.html  BUILD.bazel  CNAME  LICENSE  MODULE.bazel  README.md  README.rst  SECURITY.md  WORKSPACE.bazel  bazel.nix  create_release.sh  create_rules_ll_patch.sh  flake-module.nix  flake.nix  generate_docs.sh  go.mod  go.sum  index.html  mkdocs.yml  pre-commit-hooks.nix  renovate.json  requirements.in  requirements.txt  shell.nix  sitemap.xml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
SECURITY/: index.html
baze_ll/: baze_ll.nix
bazel-wrapper/: default.nix
compiler-rt/: compiler-rt_overlay.bzl  float128_patch.diff
devtools/: BUILD.bazel  cluster.go  docs.sh  ll.nix  main.go  module.sh  overlay.sh  rbe.nix  up.nix  up.sh
devtools/clusters/: local.go
devtools/components/: cilium.go  components.go  cubefs.go  local-volumes.go  tekton.go  zot.go
devtools/deployments/: deployments.go
docs/: .buildinfo  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  actions.html  args.html  attributes.html  bootstrap_library.html  compilation_database.html  defs.html  deps.html  driver.html  environment.html  genindex.html  index.html  index.md  init.html  inputs.html  internal_functions.html  ll.html  llvm_project_deps.html  os.html  outputs.html  providers.html  resolve_rule_inputs.html  search.html  searchindex.js  toolchain.html  tools.html  transitions.html
docs_source/: actions.md  args.md  attributes.md  bootstrap_library.md  compilation_database.md  conf.py  defs.md  deps.md  driver.md  index.rst  init.md  inputs.md  internal_functions.md  ll.md  llvm_project_deps.md  outputs.md  providers.md  toolchain.md  tools.md  transitions.md
example/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
examples/: .bazelignore  .bazelrc  .bazelversion  .clang-tidy  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  executable.cpp  flake.nix
examples/clang_tidy_example/: BUILD.bazel  executable.c  executable.cpp
examples/clang_tidy_example/lib_1/: lib_1.c  lib_1.cpp  lib_1_additional_source.cpp  lib_1_private.h  lib_1_private.hpp  lib_1_public.h  lib_1_public.hpp
examples/clang_tidy_example/lib_1/private_include/: included_header.h
examples/clang_tidy_example/lib_1/public_include/: included_header.h
examples/clang_tidy_example/lib_2/: lib_2.c  lib_2.cpp  lib_2_private.hpp  lib_2_public.h  lib_2_public.hpp
examples/coverage_example/: BUILD.bazel  main.cpp  main.hpp
examples/cuda_example/: BUILD.bazel  example.cpp
examples/external_dependency_example/: BUILD.bazel  main.cpp
examples/format_example/: BUILD.bazel  format_example.cpp
examples/frontend_action_example/: BUILD.bazel  main.cpp
examples/hip_example/: BUILD.bazel  example.cpp
examples/hip_modules_example/: BUILD.bazel  a.cppm  a_module_interface.cpp  a_module_interface.hpp  a_wrapper.cpp  a_wrapper.hpp  hip.cpp  hip.hpp  hip_dependent.cpp  hip_dependent.hpp  hip_module_example.cpp  main.cpp  module_wrapper.cpp  module_wrapper.hpp
examples/hip_rdc_example/: BUILD.bazel  add.hip.cpp  add.hip.hpp  main.hip.cpp  multiply.hip.cpp  multiply.hip.hpp
examples/module_partition_example/: BUILD.bazel  hello_world-another_world.cppm  hello_world-hello.cppm  hello_world-world.cppm  hello_world.cppm  hello_world_impl.cpp  main.cpp
examples/modules_draft_example/: BUILD.bazel  TU1.cppm  TU2.cppm  TU3.cppm  TU4.cpp  main.cpp
examples/modules_example/: A.cppm  B.cppm  BUILD.bazel  C.cpp  C.cppm  D_implementation.cpp  D_interface.cppm  a.cppm  b.cppm  c.cpp  c.cppm  d_implementation.cpp  d_interface.cppm  main.cpp
examples/openmp_example/: BUILD.bazel  main.cpp
examples/sanitizers/: BUILD.bazel  address.cpp  leak.cpp  memory.cpp  thread.cpp
examples/shared_library_example/: BUILD.bazel  main.cpp  shared.cpp  shared.hpp
examples/shared_library_example/subdir/: BUILD.bazel  shared.cpp  shared.hpp
examples/std_module_example/: BUILD.bazel  main.cpp
examples/sycl_cpu_example/: BUILD.bazel  main.cpp
examples/wasm_example/: BUILD.bazel  wasm_example.cpp
guides/: index.html
libcxx/: libcxx_overlay.bzl
libcxxabi/: libcxxabi_overlay.bzl
libunwind/: libunwind_overlay.bzl
ll/: BUILD.bazel  actions.bzl  args.bzl  attributes.bzl  bootstrap_library.bzl  compilation_database.bzl  coverage.bzl  defs.bzl  deps.bzl  driver.bzl  environment.bzl  extensions.bzl  init.bzl  inputs.bzl  internal_functions.bzl  ll.bzl  llvm_project_deps.bzl  os.bzl  outputs.bzl  providers.bzl  resolve_rule_inputs.bzl  toolchain.bzl  tools.bzl  transitions.bzl
ll/templates/: function_template.vm  header_template.vm  provider_template.vm  rule_template.vm
modules/: defaultLlEnv.nix  rules_ll-action-env.nix  rules_ll.nix
patches/: back_inserter_patch.diff  bzlmod_compatibility_patch.diff  clang_header_patch.diff  clang_new_offload_driver.diff  comgr_bc2h.diff  comgr_fix_version_check.diff  disable_synth_three_way_patch.diff  go_circl_header_fix.diff  hipamd_correct_jit_option.diff  hipamd_default_visibility.diff  hipamd_deprecate_fix.diff  hipamd_enforce_semicolon.diff  hipamd_fix_extraneous_parentheses.diff  hipamd_fix_local_address_space.diff  hipamd_inconsistent_overrides.diff  hipamd_return_fix.diff  libcxx_combined_init_patch.diff  llvm-add-missing-cuda-cmath-header.diff  llvm-project-bundle-with-bash.diff  llvm-project-fix-bazel-7.diff  llvm-project-fix-zlib-includes.diff  llvm_use_zlib-ng.diff  mallinfo2_patch.diff  nix_fix_linkerscript.diff  nixpkgs-disable-ratehammering-pulumi-tests.nix  remove_xml2_dependency.diff  rework_zlib.diff  rocm_device_libs_fix_data_layout.diff  rocr-amd_trap_handler_v2.diff  rocr-generated-files.diff  roct_adjust_kfd_bin_dir.diff  (+6 more)
third-party-overlays/: clr.BUILD.bazel  comgr.BUILD.bazel  defs.bzl  hip.BUILD.bazel  hipamd.BUILD.bazel  libcurand.BUILD.bazel  llvm-project-rocm.BUILD.bazel  opensycl.BUILD.bazel  rocclr.BUILD.bazel  rocclr_config.bzl  rocm-device-libs.BUILD.bazel  rocm-opencl-runtime.BUILD.bazel  rocr.BUILD.bazel  roct.BUILD.bazel  terminfo.bzl  zlib.bzl
(+170 files in other folders)
