module(
    name = "rules_ll",
    version = "20230411.0",
    compatibility_level = 0,
)

register_execution_platforms("@rules_ll//rbe/default/config:platform")

register_toolchains(
    "@rules_ll//ll:ll_toolchain",
    "@rules_ll//rbe/default/config:cc-toolchain",
    "@rules_ll//rbe/default/java:all",
)

# Platform support.
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Various utility functions such as path manipulations and templating.
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Documentation. These should be dev_dependencies, but that doesn't work at the
# moment. This is a bug.
bazel_dep(name = "rules_java", version = "7.5.0", dev_dependency = True)

bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = False)

# The LLVM project. We override the specific commit below.
bazel_dep(name = "llvm-project-overlay", version = "17-init-bcr.3")

# Configure the llvm-project Bazel overlay.
llvm_project_overlay = use_extension(
    "@llvm-project-overlay//utils/bazel:extensions.bzl",
    "llvm_project_overlay",
)
llvm_project_overlay.configure(
    commit = "630289f77d67703673928ae38d3e5ba900e9ff62",
    patches = [
        "@rules_ll//patches:mallinfo2_patch.diff",
        "@rules_ll//patches:rules_ll_overlay_patch.diff",
        "@rules_ll//patches:llvm-project-fix-zlib-includes.diff",
    ],
    sha256 = "7b45e1fddb1afd47afec170b481c9a12e0008d232863243cce9421b80b5ade00",
    targets = [
        "AMDGPU",
        "NVPTX",
        "WebAssembly",
        "X86",
    ],
)
use_repo(
    llvm_project_overlay,
    "llvm-project",
    "llvm-raw",
)

# Set up dependencies for rules_ll.
rules_ll_dependencies = use_extension(
    "@rules_ll//ll:init.bzl",
    "rules_ll_dependencies",
)
use_repo(
    rules_ll_dependencies,
    "clr",
    "hip",
    "llvm-project-rocm",
    "rocr",
    "roct",
    "zlib-ng",
    "zstd",
)

bazel_dep(name = "rules_go", version = "0.46.0")

# This overrides the Go dependency github.com/cloudflare/circl, which requires
# custom patches beyond what Gazelle can generate.
bazel_dep(name = "circl", version = "1.3.7")
bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_go_git_go_git_v5",
    "com_github_pulumi_pulumi_kubernetes_sdk_v4",
    "com_github_pulumi_pulumi_sdk_v3",
    "io_k8s_sigs_kind",
)
