module(
    name = "rules_ll",
    version = "20230411.0",
    compatibility_level = 0,
)

register_toolchains("@rules_ll//ll:ll_toolchain")

# Platform support.
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Various utility functions such as path manipulations and templating.
bazel_dep(name = "bazel_skylib", version = "1.6.1")

# Documentation. These should be dev_dependencies, but that doesn't work at the
# moment. This is a bug.
bazel_dep(name = "rules_java", version = "7.6.1", dev_dependency = False)
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = False)

# The LLVM project. We override the specific commit below.
bazel_dep(name = "llvm-project-overlay", version = "17-init-bcr.3")

# Configure the llvm-project Bazel overlay.
llvm_project_overlay = use_extension(
    "@llvm-project-overlay//utils/bazel:extensions.bzl",
    "llvm_project_overlay",
)
llvm_project_overlay.configure(
    commit = "5bde8017a1109128d011510dcf4ba79140a224fe",
    patches = [
        "@rules_ll//patches:mallinfo2_patch.diff",
        "@rules_ll//patches:rules_ll_overlay_patch.diff",
        "@rules_ll//patches:llvm-project-fix-zlib-includes.diff",
        "@rules_ll//patches:llvm-add-missing-cuda-cmath-header.diff",
        "@rules_ll//patches:llvm-project-bundle-with-bash.diff",
    ],
    sha256 = "1627942a74a7397968cf251dde9485080ccf3d8a0de6a40340033fe6d00e3103",
    targets = [
        "AMDGPU",
        "NVPTX",
        "WebAssembly",
        "X86",
    ],
)
use_repo(
    llvm_project_overlay,
    "llvm-project",
    "llvm-raw",
)

# Set up dependencies for rules_ll.
rules_ll_dependencies = use_extension(
    "@rules_ll//ll:init.bzl",
    "rules_ll_dependencies",
)
use_repo(
    rules_ll_dependencies,
    "clr",
    "hip",
    "llvm-project-rocm",
    "local-remote-execution",
    "rocr",
    "roct",
    "zlib-ng",
    "zstd",
)
