module(
    name = "rules_ll",
    version = "20230411.0",
    compatibility_level = 0,
)

# Platform support.
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.17")

# Various utility functions such as path manipulations and templating.
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Documentation.
#
# TODO(aaronmondal): This should be a dev_dependency, but that currently breaks
#                    the examples.
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = False)

# TODO(aaronmondal): We don't actually use this. Fix LRE upstream to make this
#                    import optional.
bazel_dep(name = "rules_rust", version = "0.56.0")

# The LLVM project. We override the specific commit below.
bazel_dep(name = "llvm-project-overlay", version = "17-init-bcr.3")

# Configure the llvm-project Bazel overlay.
llvm_project_overlay = use_extension(
    "@llvm-project-overlay//utils/bazel:extensions.bzl",
    "llvm_project_overlay",
)
llvm_project_overlay.configure(
    commit = "196dca7561b4c3865ef7d5e45c22d215619d7385",
    patches = [
        "@rules_ll//patches:mallinfo2_patch.diff",
        "@rules_ll//patches:rules_ll_overlay_patch.diff",
        "@rules_ll//patches:llvm-project-fix-zlib-includes.diff",
        "@rules_ll//patches:llvm-add-missing-cuda-cmath-header.diff",
        "@rules_ll//patches:llvm-project-bundle-with-bash.diff",
    ],
    sha256 = "7d097fe703ca41f5458ca5809f21fdb8ca13e2e6c28b3d3de85c700e43ccc7ed",
    targets = [
        "AMDGPU",
        "NVPTX",
        "WebAssembly",
        "X86",
    ],
)
use_repo(
    llvm_project_overlay,
    "llvm-project",
    "llvm-raw",
)

# Set up dependencies for rules_ll.
rules_ll_dependencies = use_extension(
    "@rules_ll//ll:init.bzl",
    "rules_ll_dependencies",
)
use_repo(
    rules_ll_dependencies,
    "clr",
    "hip",
    "llvm-project-rocm",
    "local-remote-execution",
    "rocr",
    "roct",
    "zlib-ng",
    "zstd",
)
