load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "components",
    srcs = [
        "components/cilium.go",
        "components/components.go",
        "components/cubefs.go",
        "components/tekton.go",
        "components/zot.go",
    ],
    importpath = "github.com/eomii/rules_ll/devtools/components",
    deps = [
        "@com_github_pulumi_pulumi_kubernetes_sdk_v3//go/kubernetes/core/v1:core",
        "@com_github_pulumi_pulumi_kubernetes_sdk_v3//go/kubernetes/helm/v3:helm",
        "@com_github_pulumi_pulumi_kubernetes_sdk_v3//go/kubernetes/meta/v1:meta",
        "@com_github_pulumi_pulumi_kubernetes_sdk_v3//go/kubernetes/yaml",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi",
    ],
)

go_library(
    name = "clusters",
    srcs = ["clusters/local.go"],
    importpath = "github.com/eomii/rules_ll/devtools/clusters",
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@io_k8s_sigs_kind//pkg/cluster",
    ],
)

go_binary(
    name = "cluster",
    srcs = ["main.go"],
    importpath = "github.com/eomii/rules_ll/devtools",
    visibility = ["//visibility:public"],
    deps = [
        ":clusters",
        ":components",
        "@com_github_pulumi_pulumi_sdk_v3//go/auto",
        "@com_github_pulumi_pulumi_sdk_v3//go/auto/optup",
        "@com_github_pulumi_pulumi_sdk_v3//go/common/tokens",
        "@com_github_pulumi_pulumi_sdk_v3//go/common/workspace",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi",
        "@io_k8s_sigs_kind//pkg/cluster",
        "@io_k8s_sigs_kind//pkg/cmd",
    ],
)
