load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Usually one will have to use http_archive instead of new_local_repository
# to import rules_ll.
#
# http_archive(
#     name = "rules_ll",
#     sha256 = "<Correct SHA256>",
#     urls = [
#         "https://github.com/neqochan/rules_ll/archive/<COMMIT_HASH>.zip"
#     ]
# )

local_repository(
    name = "rules_ll",
    path = "..",
)

load("@rules_ll//ll:deps.bzl", "rules_ll_dependencies")
rules_ll_dependencies()

load("@rules_ll//ll:init.bzl", "initialize_rules_ll")
initialize_rules_ll(
    local_crt_path = "/usr/lib64",
    # llvm_commit,
    # llvm_sha256,
)

load(
    "@llvm-raw//utils/bazel:configure.bzl",
    "llvm_configure",
    "llvm_disable_optional_support_deps",
)
llvm_configure(
    name = "llvm-project",
    targets = [
        "X86",
    ],
)
llvm_disable_optional_support_deps()

register_toolchains(
    "@rules_ll//ll:ll_bootstrap_toolchain",
    "@rules_ll//ll:ll_toolchain",
)
