load("@rules_ll//ll:defs.bzl", "ll_compilation_database")
load("@bazel_skylib//rules:native_binary.bzl", "native_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//:__subpackages__"],
)

ll_compilation_database(
    name = "compile_commands",
    config = ":clang_tidy_config",
    targets = [
        # "//clang_tidy_example",  # This one runs separately.
        "//cuda_example",
        "//format_example",
        "//frontend_action_example",
        "//hip_example",
        "//hip_rdc_example",
        "//module_partition_example",
        "//modules_example",
        # "//modules_draft_example",  # Not clang-tidy conform.
        "//openmp_example",
        # "//sanitizers",  # Not clang-tidy conform.
        "//shared_library_example",
    ],
)

# Tests start below.

EXAMPLES = [
    "format_example",
    "frontend_action_example",
    "modules_example",
    "module_partition_example",
    "openmp_example",
    # "coverage_example",
    # "sanitizers",
    # "clang_tidy_example",
    "shared_library_example",
    "modules_draft_example",

    # GPU tests.
    # "cuda_example",
    # "hip_example",
    # "hip_rdc_example",
]

TESTS = [
    native_test(
        name = "{}_test".format(name),
        src = "//{}".format(name),
        out = "{}_test".format(name),
        data = ["//{}".format(name)],
    )
    for name in EXAMPLES
]

test_suite(
    name = "examples",
    tests = [
        "{}_test".format(name)
        for name in EXAMPLES
    ],
)
