load("@rules_ll//ll:defs.bzl", "ll_compilation_database")
load("@bazel_skylib//rules:native_binary.bzl", "native_test")

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//:__subpackages__"],
)

ll_compilation_database(
    name = "compile_commands",
    config = ":clang_tidy_config",
    targets = [
        # "//clang_tidy_example",  # This one runs separately.
        "//cuda_example",
        "//format_example",
        "//frontend_action_example",
        "//hip_example",
        "//hip_rdc_example",
        "//module_partition_example",
        "//modules_example",
        # "//modules_draft_example",  # Not clang-tidy conform.
        "//openmp_example",
        # "//sanitizers",  # Not clang-tidy conform.
        "//shared_library_example",
    ],
)

# Tests start below.

test_suite(name = "all")

# CPU tests.

EXAMPLES = [
    "format_example",
    "frontend_action_example",
    "modules_example",
    "module_partition_example",
    "openmp_example",
    # "coverage_example",
    # "sanitizers",
    # "clang_tidy_example",
    "shared_library_example",
    "modules_draft_example",
]

test_suite(
    name = "cpp",
    tests = [
        "{}_test".format(name)
        for name in EXAMPLES
    ],
)

[
    native_test(
        name = "{}_test".format(name),
        timeout = "short",
        src = "//{}".format(name),
        out = "{}_test".format(name),
    )
    for name in EXAMPLES
]

# NVPTX tests.

test_suite(
    name = "nvptx",
    tags = ["nvptx"],
)

native_test(
    name = "cuda_example_test",
    timeout = "short",
    src = "//cuda_example",
    out = "cuda_example_test",
    tags = ["nvptx"],
)

native_test(
    name = "hip_example_nvptx_test",
    timeout = "short",
    src = "//hip_example:nvptx",
    out = "hip_example_nvptx_test",
    tags = ["nvptx"],
)

native_test(
    name = "hip_rdc_example_nvptx_test",
    timeout = "short",
    src = "//hip_rdc_example:nvptx",
    out = "hip_rdc_example_nvptx_test",
    tags = ["nvptx"],
)

# AMDGPU tests.

test_suite(
    name = "amdgpu",
    tags = ["amdgpu"],
)

native_test(
    name = "hip_example_amdgpu_test",
    timeout = "short",
    src = "//hip_example:amdgpu",
    out = "hip_example_amdgpu_test",
    tags = ["amdgpu"],
)

native_test(
    name = "hip_rdc_example_amdgpu_test",
    timeout = "short",
    src = "//hip_rdc_example:amdgpu",
    out = "hip_rdc_example_amdgpu_test",
    tags = ["amdgpu"],
)
